# Lipuma-Cpp

./: .build.yml  CMakeLists.txt  LICENSE  README.md  STYLE.md  file
Deliverables/: D0_ideas.md  D1_ProjectSpec.md  D2_Project_Decomposition.md  D3_LoFi_Prototype.md  D4_Midterm_Documentation.md  D5: Testing Plan and Documentation.md  D6_Implementation_Proof.md  userVerbs.md
Deliverables/img/: lipuma_demo.mkv
Reflections/: Week_1_reflection.md  Week_2_reflection.md  Week_3_reflections.md  Week_4_reflection.md  Week_5_reflection.md  Week_6_reflection.md
src/: CMakeLists.txt  main.cpp  pointHelper.hpp
src/drawable/: CMakeLists.txt  drawable.cpp  drawable.hpp  editPoint.cpp  editPoint.hpp  fractalCurve.cpp  fractalCurve.hpp  fractalLine.cpp  fractalLine.hpp
src/file/: CMakeLists.txt  serializer.cpp  serializer.hpp
src/math/: CMakeLists.txt  beizer.cpp  beizer.hpp  bezier.cpp  bezier.hpp  constants.hpp  points.cpp  points.hpp
src/tool/: CMakeLists.txt  fractalCurveTool.cpp  fractalCurveTool.hpp  fractalTool.cpp  fractalTool.hpp  selectionTool.cpp  selectionTool.hpp  tool.cpp  tool.hpp  toolManager.cpp  toolManager.hpp
src/widget/: CMakeLists.txt  canvas.cpp  canvas.hpp  toolSelector.cpp  toolSelector.hpp
tests/: CMakeLists.txt  catchQtPrintOverrides.hpp  catch_main.cpp  test_math.cpp  test_pointHelper.cpp
